<resources>
    <string name="app_name">AWAZ</string>
    <string name="record_button_name">Record</string>
    <string name="play_button_name">Play</string>
    <string name="splash">SPLASH !!!</string>
    <string name="appName">AWAJ</string>
    <string name="tap_to_continue">Tap to continue...</string>

    <string name="audio_record">RECORDER</string>
    <string name="audio_monitor">MONITOR</string>
    <string name="vocal_tester">VOCAL TESTER</string>
    <string name="note_generator">NOTE GENERATOR</string>
    <string name="guitar_tuner">GUITAR TUNER</string>
    <string name="tone_generator">TONE GENERATOR</string>

    <string name="current_main_activity">MAIN ACTIVITY</string>
    <string name="home">HOME</string>

    <string name="menu_manual">Manual</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="about_title">AWAZ</string>
    <string name="about_intro"></string>
    <string name="about_body">Awaz is an audio analyzer.\n\nDevelopers:\nAmit Gupta\nAnup Khanal\nKeshav Dulal\nSami Baral\n\nMentors:Rajesh Khadka\nBinod Shrestha</string>


</resources>
